--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
