--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.5.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1"
   },
