--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "date-fns": "^2.28.0",
+    "dotenv": "^14.2.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
