--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "react-toastify": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
